--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@tailwindcss/forms": "^0.4.0",
+    "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "faker": "^5.5.3",
+    "luxon": "^2.3.0",
     "pg": "^8.7.1",
     "react-feather": "^2.0.9",
     "sequelize": "^6.12.4",
